[package]
name = "nat-traversal-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3" }
bytes = "1"
socket2 = "0.5"
clap = { version = "4", features = ["cargo"] }
rand = { version = "0.8" }

log = "0.4"
env_logger = "0.11.7"
